--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Our CI
+name: node.js CI
 on: push
 jobs:
   build:
@@ -9,5 +9,5 @@ jobs:
         with:
           node-version: 20.11.0
       - run: npm ci
+      - run: npm run build --if-present
       - run: npm test
-      - run: npm run build
