--- a/.github/workflows/deploy_to_vm_instance.yml
+++ b/.github/workflows/deploy_to_vm_instance.yml
@@ -31,4 +31,4 @@ jobs:
             port: 22
             script: |
                 cd /home/bot
-                node ./index.js
+                node .
