--- a/.github/workflows/deploy_to_vm_instance.yml
+++ b/.github/workflows/deploy_to_vm_instance.yml
@@ -21,15 +21,15 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
             source: '.' # 현재 디렉토리의 파일 및 폴더를 복사
-            target: '/home/bot' # VM 인스턴스의 /home/bot 경로로 복사
+            target: '/home/bot/build' # VM 인스턴스의 /home/bot 경로로 복사
 
-      - name: SSH into VM and restart application
-        uses: appleboy/ssh-action@master
-        with:
-            host: ${{ secrets.HOST }} 
-            username: ${{ secrets.USERNAME }}
-            key: ${{ secrets.SSH_KEY }}
-            passphrase: ${{ secrets.SSH_PASSPHRASE }}
-            script: |
-                cd /home/bot
-                node .
+    #   - name: SSH into VM and restart application
+    #     uses: appleboy/ssh-action@master
+    #     with:
+    #         host: ${{ secrets.HOST }} 
+    #         username: ${{ secrets.USERNAME }}
+    #         key: ${{ secrets.SSH_KEY }}
+    #         passphrase: ${{ secrets.SSH_PASSPHRASE }}
+    #         script: |
+    #             cd /home/bot
+                
