--- a/.github/workflows/deploy_to_vm_instance.yml
+++ b/.github/workflows/deploy_to_vm_instance.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: delete previous build
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         with:
             host: ${{ secrets.HOST }} 
             username: ${{ secrets.USERNAME }}
