--- a/.github/workflows/deploy_to_vm_instance.yml
+++ b/.github/workflows/deploy_to_vm_instance.yml
@@ -33,13 +33,14 @@ jobs:
             source: './src/*, package.json, package-lock.json' # 현재 디렉토리의 파일 및 폴더를 복사
             target: '/home/bot/build' # VM 인스턴스의 /home/bot 경로로 복사
 
-    #   - name: SSH into VM and restart application
-    #     uses: appleboy/ssh-action@master
-    #     with:
-    #         host: ${{ secrets.HOST }} 
-    #         username: ${{ secrets.USERNAME }}
-    #         key: ${{ secrets.SSH_KEY }}
-    #         passphrase: ${{ secrets.SSH_PASSPHRASE }}
-    #         script: |
-    #             cd /home/bot
+      - name: Install Dependencies
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.HOST }} 
+            username: ${{ secrets.USERNAME }}
+            key: ${{ secrets.SSH_KEY }}
+            passphrase: ${{ secrets.SSH_PASSPHRASE }}
+            script: |
+                cd /home/bot/build
+                npm ci
                 
