--- a/.github/workflows/deploy_to_vm_instance.yml
+++ b/.github/workflows/deploy_to_vm_instance.yml
@@ -43,4 +43,5 @@ jobs:
             script: |
                 cd /home/bot/build
                 npm ci
+                npm start
                 
