--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "jsdom": "^24.0.0",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "pm2": "^5.3.1"
   }
 }
