--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start src/index.js"
+    "start": "pm2 start src/index.js -f"
   },
   "keywords": [],
   "author": "",
