--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
+    "glicko2": "^1.1.0",
     "jsdom": "^24.0.0",
     "mongoose": "^8.1.1",
     "pm2": "^5.3.1"
